--- a/src/app.postcss
+++ b/src/app.postcss
@@ -1,8 +1,10 @@
 /* Write your global styles here, in PostCSS syntax */
 
 @tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-
+/* Global CSS */
 :root {
   @apply font-sans;
   line-height: 1.5;
@@ -75,5 +77,5 @@ input::placeholder {
 }
 
 
-@tailwind components;
-@tailwind utilities;
+
+
